--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,7 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
+@import 'uploadthing/tw/v4';
+@source "../node_modules/@uploadthing/react/dist";
 
 @custom-variant dark (&:is(.dark *));
 
@@ -119,4 +121,8 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+[data-state='uploading']::after {
+  @apply bg-primary/50;
 }
