--- a/app/globals.css
+++ b/app/globals.css
@@ -123,6 +123,16 @@
   }
 }
 
+@layer utilities {
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+}
+
 [data-state='uploading']::after {
   @apply bg-primary/50;
 }
